--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <p>Besnik</p>
+            <p>IGORAZA <span>SKINX</span></p>
         </div>
         <div class="options">
             <p>Home</p>
@@ -130,14 +130,45 @@
             </button>
         </div>
     </div>
-    <div class="footer">
-        <div class="yellowcircle">
+       <div class="footer">
 
+        <div class="logodiv">
+            <img src="./Primary Original.png" alt="" />
+            <p>&nbsp; Innovation meets reality</p>
         </div>
-        <p>Feel free to contact <br>
-        product available from 11:30 PM</p>
 
-        <p>hellobesnik@gmail.com</p>
+        <div>
+            <p>Product</p>
+            <p>New</p>
+            <p>Upcoming</p>
+            <p>Man collection</p>
+            <p>On sale</p>
+            <p>Live Demo</p>
+        </div>
+        <div>
+            <p>Resource</p>
+            <p>instagram post</p>
+            <p>Blog</p>
+            <p>Live Demo</p>
+        </div>
+        <div>
+            <p>Contact us</p>
+            <p>Live chat</p>
+            <p>Mail us</p>
+        </div>
+    </div>
+
+    <div class="love">
+        <p>ⒸCopyright & All Rights Reserved 2023 <a href="https://www.igoraza.com/">@IGORAZA.</a> Designed By IGORAZA
+        </p>
+        <div class="socialicons">
+            <img src="./fbdark.png" alt="" />
+            <img src="./twitterdark.png" alt="" />
+            <img src="./linkedindark.png" alt="" />
+            <a href="https://www.igoraza.com/">
+                <img src="./globedark.png" alt="" />
+            </a>
+        </div>
     </div>
 </body>
 
