--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 products for <br>
                 your skin</h1>
         </div>
-        <img src="./heroimg.png" alt="">
+        <img src="./images/heroimg.png" alt="">
     </div>
 
     <div class="ordernow">
-        <img src="./fillerbottle.png" alt="">
+        <img src="./images/fillerbottle.png" alt="">
         <div class="orderdetails">
             <p>$7.20 <br> AHA 30% + BHA 2% <br> Peeling Soulution</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi autem doloremque voluptatum distinctio
@@ -57,7 +57,7 @@
         <div class="chooseleft">
             <p>Why choose us?</p>
             <p>How to use <br> learn more details</p>
-            <img src="./cards.png" alt="">
+            <img src="./images/cards.png" alt="">
         </div>
         <div class="apply">
             <p>Apply and ingredients</p>
@@ -77,7 +77,7 @@
         </div>
         <div class="profile">
             <div>
-                <img src="./girl.jpg" alt="">
+                <img src="./images/girl.jpg" alt="">
             </div>
             <p>Miana</p>
         </div>
@@ -91,7 +91,7 @@
         </div>
         <div class="strategyimages">
             <div class="card">
-                <img src="./strategy1.png" alt="">
+                <img src="./images/strategy1.png" alt="">
                 <p>Today Hot News</p>
                 <p>Notes : This formula contains a very
                     high concentration of free acids
@@ -99,7 +99,7 @@
             </div>
 
             <div class="card">
-                <img src="./strategy2.png" alt="">
+                <img src="./images/strategy2.png" alt="">
                 <p>New Product Released</p>
                 <p>Anything but ordinary , this peeling Soulution
                     unites AHAs and BHAs to offer
@@ -107,7 +107,7 @@
             </div>
 
             <div class="card">
-                <img src="./strategy3.png" alt="">
+                <img src="./images/strategy3.png" alt="">
                 <p>50% Sale on product</p>
                 <p>Together , they radically improve the
                     appearance of the skin's texture
@@ -133,7 +133,7 @@
        <div class="footer">
 
         <div class="logodiv">
-            <img src="./Primary Original.png" alt="" />
+            <img src="./images/Primary Original.png" alt="" />
             <p>&nbsp; Innovation meets reality</p>
         </div>
 
@@ -162,11 +162,11 @@
         <p>ⒸCopyright & All Rights Reserved 2023 <a href="https://www.igoraza.com/">@IGORAZA.</a> Designed By IGORAZA
         </p>
         <div class="socialicons">
-            <img src="./fbdark.png" alt="" />
-            <img src="./twitterdark.png" alt="" />
-            <img src="./linkedindark.png" alt="" />
+            <img src="./images/fbdark.png" alt="" />
+            <img src="./images/twitterdark.png" alt="" />
+            <img src="./images/linkedindark.png" alt="" />
             <a href="https://www.igoraza.com/">
-                <img src="./globedark.png" alt="" />
+                <img src="./images/globedark.png" alt="" />
             </a>
         </div>
     </div>
